testdata/test/resources/com/yafred/asn1/test/should_fail/choice_cannot_be_implicit_3.asn
-- FAIL
Untagged-Choice3 DEFINITIONS ::=
BEGIN

Type ::= SEQUENCE {
  component [0] IMPLICIT Referenced
}

Referenced ::= Choice

Choice ::= CHOICE { alternative NULL }

END

